syntax = "proto3";

package hephaestus;

option go_package = "github.com/HoyeonS/hephaestus/proto";

import "google/protobuf/timestamp.proto";

// HephaestusService provides the main API interface for the Hephaestus system
service HephaestusService {
    // Node Management
    rpc RegisterNode(RegisterNodeRequest) returns (RegisterNodeResponse);
    rpc GetNodeStatus(NodeStatusRequest) returns (NodeStatusResponse);
    rpc UpdateNodeConfiguration(UpdateNodeConfigurationRequest) returns (UpdateNodeConfigurationResponse);
    rpc DeleteNode(DeleteNodeRequest) returns (DeleteNodeResponse);

    // Log Processing
    rpc ProcessLogEntry(ProcessLogEntryRequest) returns (ProcessLogEntryResponse);
    rpc StreamLogEntries(StreamLogEntriesRequest) returns (stream LogEntryData);

    // Solution Management
    rpc GetSolutionProposal(GetSolutionProposalRequest) returns (GetSolutionProposalResponse);
    rpc ValidateSolution(ValidateSolutionRequest) returns (ValidateSolutionResponse);
}

// Configuration Messages
message SystemConfiguration {
    RemoteRepositoryConfiguration remote_settings = 1;
    ModelServiceConfiguration model_settings = 2;
    LoggingConfiguration logging_settings = 3;
    string operational_mode = 4;
    RepositoryConfiguration repository_settings = 5;
}

message RemoteRepositoryConfiguration {
    string auth_token = 1;
    string repository_owner = 2;
    string repository_name = 3;
    string target_branch = 4;
}

message ModelServiceConfiguration {
    string service_provider = 1;
    string service_api_key = 2;
    string model_version = 3;
}

message LoggingConfiguration {
    string log_level = 1;
    string output_format = 2;
}

message RepositoryConfiguration {
    string repository_path = 1;
    int32 file_limit = 2;
    int64 file_size_limit = 3;
}

// Node Management Messages
message RegisterNodeRequest {
    string node_id = 1;
    string log_level = 2;
    string log_output = 3;
}

message RegisterNodeResponse {
    string status = 1;
    string error = 2;
}

message NodeStatusRequest {
    string node_identifier = 1;
}

message NodeStatusResponse {
    string node_identifier = 1;
    string operational_status = 2;
    SystemConfiguration current_configuration = 3;
    string status_message = 4;
}

message UpdateNodeConfigurationRequest {
    string node_identifier = 1;
    SystemConfiguration new_configuration = 2;
}

message UpdateNodeConfigurationResponse {
    string node_identifier = 1;
    string status_message = 2;
    bool success = 3;
}

message DeleteNodeRequest {
    string node_identifier = 1;
}

message DeleteNodeResponse {
    string status_message = 1;
    bool success = 2;
}

// Log Processing Messages
message LogEntryData {
    string node_identifier = 1;
    string log_level = 2;
    string log_message = 3;
    string log_timestamp = 4;
    map<string, string> log_metadata = 5;
    string error_trace = 6;
}

message ProcessLogEntryRequest {
    LogEntryData log_entry = 1;
}

message ProcessLogEntryResponse {
    string status = 1;
    string error = 2;
}

message StreamLogEntriesRequest {
    string node_identifier = 1;
    string log_level_filter = 2;
}

// Solution Management Messages
message GetSolutionProposalRequest {
    string node_id = 1;
    LogEntryData log_entry = 2;
}

message SolutionProposal {
    string solution_id = 1;
    string node_id = 2;
    LogEntryData associated_log = 3;
    string proposed_changes = 4;
    google.protobuf.Timestamp generation_time = 5;
    double confidence_score = 6;
}

message GetSolutionProposalResponse {
    SolutionProposal solution = 1;
    string error = 2;
}

message ValidateSolutionRequest {
    SolutionProposal solution = 1;
}

message ValidateSolutionResponse {
    bool is_valid = 1;
    string error = 2;
} 